<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Session.Student.StudentActivity.MainScreen.ActivityStudentFrag">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:id="@+id/recyclerViewStudentQuiz"></android.support.v7.widget.RecyclerView>


</FrameLayout>
